cm-super (0.3.4-1~1) unstable; urgency=low

  * new upstream release
  * add a link /u/s/texmf/doc/fonts/cm-super -> /u/s/doc/cm-super-minimal
    so that the documentation can be found by texdoctk (Closes: #444308)
  * add Vcs-Svn and Vcs-Browser fields to debian/control

 -- Norbert Preining <preining@debian.org>  Thu, 10 Jul 2008 14:53:04 +0200

cm-super (0.3.3-6) unstable; urgency=low

  * change README.Debian encoding to UTF8 (thanks Ralf for noticing)
  * change maintainer email to debian-tex-maint ML, add myself to the
    Uploaders
  * create cm-super-minimal package (too many changes to list)
  * remove upgrade code from old-stable version from cm-super.preinst
  * make /u/s/d/cm-super(-x11) links to cm-super-minimal

 -- Norbert Preining <preining@debian.org>  Mon, 13 Aug 2007 09:30:26 +0200

cm-super (0.3.3-5) unstable; urgency=low

  * remove the X11R7 scale file as it never entered testing and the
    X11R7 hierachy under /e/X/ is deprecated now.

 -- Norbert Preining <preining@logic.at>  Fri,  2 Jun 2006 23:22:11 +0200

cm-super (0.3.3-4) unstable; urgency=low

  * Switch to dh_installtex usage, adapt the control file, remove the
    respective stuff in the maintainer scripts
  * Add encoding entries for microsoft-cp1251 and iso8859-5 (Closes: #332672)
  * X fonts transition (Closes: #362324)
    - Move pfb/afm links from X11R6 hierachy to /usr/share/fonts/X11
    - remove lintian override file
    - build-depends to debhelper >= 5.0.31
    - adapt location of file in defoma hints file
    - remove installation of X11R6/fonts/Type1 directory
    - install .scale file into /e/X11/fonts/X11R7/Type1
  * bump standards version to 3.7.2, changes are font transition (see above)
  * move the dir creation from package.dirs to the rules file
  * move the t1c file to /usr/share/cm-super, and empty it after installation
    of the fonts. Adjust the md5sum magic for including the right md5sum for