@@ -4,8 +4,10 @@ cm-super (0.3.4-1~1) unstable; urgency=low
   * add a link /u/s/texmf/doc/fonts/cm-super -> /u/s/doc/cm-super-minimal
     so that the documentation can be found by texdoctk (Closes: #444308)
   * add Vcs-Svn and Vcs-Browser fields to debian/control
+  * remove pfb2t1c.c since we have that package in Debian
+  * Standards version 3.8.0, no changes necessary
 
- -- Norbert Preining <preining@debian.org>  Thu, 10 Jul 2008 14:53:04 +0200
+ -- Norbert Preining <preining@debian.org>  Thu, 10 Jul 2008 14:57:28 +0200
 
 cm-super (0.3.3-6) unstable; urgency=low
 
